5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1667_2968.log
== TEST (2019-04-16 16:34:19) 
-- CODE:
L=5.00
S=3.50
refri=4.00

-- ERROR:
File "XXXX", line 4
    if(i <= 0.01):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:20) 
-- CODE:
L=5.00
S=3.50
refri=4.00

-- ERROR:
File "XXXX", line 4
    if(i <= 0.01):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:10) 
-- CODE:
L=5.00
S=3.50
refri=4.00
a=float(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(refri*c)
else (a==S):
	total= (3.50*b)+(refri*c)
print(round(total,2))
-- ERROR:
File "XXXX", line 9
    else (a==S):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:20) 
-- CODE:
L=5.00
S=3.50
refri=4.00
a=float(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(refri*c)
else (a==S):
	total= (3.50*b)+(refri*c)
print(round(total,2))
-- ERROR:
File "XXXX", line 9
    else (a==S):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:42:21) 
-- CODE:
L=5.00
S=3.50
refri=4.00
a=float(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(refri*c)
else (a==S):
	total= (3.50*b)+(refri*c)
print(round(total,2))
-- EXECUTION TIME:
0.19683
-- ERROR:
  File "/home/codebench/codes/1667/2968/main.py", line 9
    else (a==S):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:33) 
-- CODE:
L=5.00
S=3.50
refri=4.00
a=float(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(refri*c)
else:
	total= (3.50*b)+(refri*c)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:42:35) 
-- CODE:
L=5.00
S=3.50
refri=4.00
a=float(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(refri*c)
else:
	total= (3.50*b)+(refri*c)
print(round(total,2))
-- EXECUTION TIME:
0.171036
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 4, in <module>
    a=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:50) 
-- CODE:
L=5.00
S=3.50
refri=4.00
a=float(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(refri*c)
if (a==S):
	total= (3.50*b)+(refri*c)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:42:53) 
-- CODE:
L=5.00
S=3.50
refri=4.00
a=float(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(refri*c)
if (a==S):
	total= (3.50*b)+(refri*c)
print(round(total,2))
-- EXECUTION TIME:
0.177216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 4, in <module>
    a=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:48) 
-- CODE:
L=5.00
S=3.50
r=4.00
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(r*c)
else (a==S):
	total= (3.50*b)+(r*c)
print(round(total,2))
-- ERROR:
File "XXXX", line 9
    else (a==S):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:25) 
-- CODE:
L=5.00
S=3.50
r=4.00
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(r*c)
else:
	total= (3.50*b)+(r*c)
print(round(total,2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:27) 
-- CODE:
L=5.00
S=3.50
r=4.00
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(r*c)
else:
	total= (3.50*b)+(r*c)
print(round(total,2))
-- EXECUTION TIME:
0.199892
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
49.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:28) 
-- CODE:
L=5.00
S=3.50
r=4.00
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(r*c)
else:
	total= (3.50*b)+(r*c)
print(round(total,2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:39) 
-- CODE:
L=5.00
S=3.50
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:42) 
-- CODE:
L=5.00
S=3.50
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:46:42) 
-- CODE:
L=5.00
S=3.50
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- EXECUTION TIME:
0.122879
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
49.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:46:43) 
-- CODE:
L=5.00
S=3.50
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- EXECUTION TIME:
0.192867
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
49.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:44) 
-- CODE:
L=5.00
S=3.50
a= input()
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:33) 
-- CODE:
L=5.00
S=3.50
a= int(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:52:35) 
-- CODE:
L=5.00
S=3.50
a= int(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- EXECUTION TIME:
0.180574
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 3, in <module>
    a= int(input())
ValueError: invalid literal for int() with base 10: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:52:57) 
-- CODE:
L=5.00
S=3.50
a=int(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- EXECUTION TIME:
0.184885
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 3, in <module>
    a=int(input())
ValueError: invalid literal for int() with base 10: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:58) 
-- CODE:
L=5.00
S=3.50
a=int(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:03) 
-- CODE:
L=5.00
S=3.50
a=int(input())
b=int(input())
c=int(input())
if (a==L):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:42) 
-- CODE:
L=5.00
S=3.50
a=input()
b=int(input())
c=int(input())
if (a==5.00):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:54:43) 
-- CODE:
L=5.00
S=3.50
a=input()
b=int(input())
c=int(input())
if (a==5.00):
	total= (5.00*b)+(4.00*c)
else:
	total= (3.50*b)+(4.00*c)
print(round(total,2))
-- EXECUTION TIME:
0.153241
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
49.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
